Apache::Session. [Dave Rolsky]

=back

=head1 Version 1.11.4 (2010-03-29)

=head2 New Features

=over

=item *

Added the C<--match-title> option to F<contrib/bric_media_upload>. This will
match the uploading file name against the title of the media object rather than
the file name [Paul Orrock]

=item *

Added the new Bricolage logo to the user interface. [Phillip Smith]

=back

=head2 Improvements

=over

=item *

When displaying categories associated with a story and the
C<ENABLE_CATEGORY_BROWSER> F<bricolage.conf> directive is true, the categories
are now displayed in alphabetical order by URI. [David]

=item *

The installer no longer requires that L<Term::ReadPassword> be installed from
the CPAN before it continues. It will use it if it finds it, but if not it
substitutes a simple implementation that does the trick (Bug #136). [David]

=item *

When creating or editing a story or media document, the Source select list now
lists sources in alphabetical order. Reported by Michael Herring (Bug # 138).
[David]

=item *

Added the C<SFTP_KEY_TYPE>, C<SFTP_PRIVATE_KEY_FILE> and
C<SFTP_PUBLIC_KEY_FILE> F<bricolage.conf> directives to to restore key-based
authentication to the SFTP mover. These were necessary as the old F<SFTP_HOME>
directive does not work with the new implementation based on F<Net::SSH2> (Bug
# 127). [Greg Heo]


=item *

When started by the root user, the F<bric_queued> and F<bric_ftpd> daemons now
become the Bricolage system user (usually the Apache user) after forking their
subprocesses, rather than before. This means that the PID file is now created
by the root user, and so should encounter no permission errors when saving the
PID file to standard OS locations. Reported by Serge Ivanchenko. [David]

=item *

The default location for the FTP server's log files is now the F<log>
subdirectory of the bricolage root directory, rather than the bricolage root
directory itself. This is what comments in F<bricolage.conf> have always