@@ -15,7 +15,7 @@
 
 <& '/widgets/wrappers/table_bottom.mc' &>
 
-<div id="contribbuttons">
+<div id="assocbuttons">
 <& "/widgets/profile/button.mc",
     disp      => 'Cancel',
     name      => 'cancel',
